@@ -1,5 +1,10 @@
 2007-09-30 Mathieu Blondel <mblondel@svn.gnome.org>
 
+    * lib/fantasdic/ui/add_dictionary_dialog.rb: Fixed a bug which prevented
+    the databases list from being displayed in some cases.
+
+2007-09-30 Mathieu Blondel <mblondel@svn.gnome.org>
+
     * lib/fantasdic/sources/dict_server.rb: Initialize data after initializing
     signals.
 
